[gd_scene load_steps=6 format=2]

[ext_resource path="res://Full Moon - background.png" type="Texture" id=1]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://MenuLogic.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 153.5, 105 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 5.0
margin_left = 86.5
margin_top = 45.5
margin_right = 126.5
margin_bottom = 62.5
custom_fonts/font = SubResource( 1 )
text = "Ponamu    Adventure!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 200.5
margin_top = 88.5
margin_right = 268.5
margin_bottom = 111.5
custom_fonts/font = SubResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 200.5
margin_top = 122.5
margin_right = 268.5
margin_bottom = 145.5
custom_fonts/font = SubResource( 2 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 200.5
margin_top = 154.5
margin_right = 268.5
margin_bottom = 177.5
custom_fonts/font = SubResource( 2 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 1.0
margin_top = 125.5
margin_right = 121.0
margin_bottom = 148.5
custom_fonts/font = SubResource( 2 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLogic" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Instructions" type="Label" parent="."]
anchor_right = 5.0
margin_left = 2.5
margin_top = 71.0
margin_right = 42.5
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Button" to="MenuLogic" method="_on_Button_button_up"]
[connection signal="button_up" from="Button2" to="MenuLogic" method="_on_Button2_button_up"]
[connection signal="button_up" from="Button3" to="MenuLogic" method="_on_Button3_button_up"]
[connection signal="button_up" from="Button4" to="MenuLogic" method="_on_Button4_button_up"]
